# learnlock

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
Formula/: learnlock.rb
docs-site/: README.md  package-lock.json  package.json
docs-site/src/app/: globals.css  layout.tsx  page.tsx
docs-site/src/app/docs/: layout.tsx  page.tsx
docs-site/src/app/docs/adding-content/: page.tsx
docs-site/src/app/docs/adversarial-learning/: page.tsx
docs-site/src/app/docs/commands/: page.tsx
docs-site/src/app/docs/configuration/: page.tsx
docs-site/src/app/docs/duel-engine/: page.tsx
docs-site/src/app/docs/installation/: page.tsx
docs-site/src/app/docs/ocr/: page.tsx
docs-site/src/app/docs/quickstart/: page.tsx
docs-site/src/components/blocks/: hero-section.tsx  navbar.tsx
docs-site/src/components/landing/: terminal-demo.tsx
docs-site/src/components/layout/: docs-page-transition.tsx  mobile-sidebar.tsx  sidebar.tsx
docs-site/src/components/ui/: accordion.tsx  code-block.tsx  container-scroll-animation.tsx  infinite-moving-cards.tsx  lamp-effect.tsx  navigation-menu.tsx  pixel-canvas.tsx  sheet.tsx
docs-site/src/lib/: docs-nav.ts
src/learnlock/: __init__.py  cli.py  coach.py  config.py  duel.py  hud.py  llm.py  ocr.py  scheduler.py  security.py  storage.py
src/learnlock/tools/: __init__.py  article.py  base.py  github.py  pdf.py  youtube.py
tests/: conftest.py  test_cli.py  test_duel.py  test_llm.py  test_scheduler.py  test_security.py  test_storage.py  test_tools.py
(+3 files in other folders)
