[project]
name = "learnlock"
version = "0.1.0"
description = "Stop consuming. Start retaining. Spaced repetition with active recall."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "litellm>=1.0.0",
    "youtube-transcript-api>=0.6.0",
    "trafilatura>=1.6.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]
ocr = [
    "easyocr",
    "pillow",
]
whisper = [
    "yt-dlp",
    "groq",
]

[project.scripts]
learnlock = "learnlock.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/learnlock"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
